Updated to PyTorch 2x

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,10 @@ natsort
 numpy<2
 scipy
 matplotlib
-# cpu version: nnutils-pytorch
-nnutils-pytorch-cuda
-pytorch-lightning==1.1.7
-torch>=1.13,<1.14
-torchvision>=0.14,<0.15
-torchaudio>=0.13,<0.14
+pytorch-lightning>=2.0.0
+torch>=2.0.0,<3.0.0
+torchvision>=0.15.0,<1.0.0
+torchaudio>=2.0.0,<3.0.0
 jsonargparse[signatures]==4.7
 imagesize==1.4.1
 dataclasses; python_version < '3.7'
